# crypto-order-flow-synchronization

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
outputs/: PATH_NORMALIZATION.md
research_protocols/: common_liquidity_order_flow_v1.md  common_liquidity_order_flow_v1.seal.json  cross_venue_order_flow_transmission_v1.md  cross_venue_order_flow_transmission_v1.seal.json  okx_order_flow_external_validation_v1.pre_composite.seal.json  okx_order_flow_external_validation_v1.pre_timezone.seal.json  okx_order_flow_external_validation_v1.seal.json  okx_order_flow_external_validation_v1_amendment_1.md  okx_order_flow_external_validation_v1_amendment_2.md  order_flow_synchronization_v1.pre_execution.seal.json  order_flow_synchronization_v1.pre_futures_quality.seal.json  order_flow_synchronization_v1.seal.json  order_flow_synchronization_v1_amendment_1.md  order_flow_synchronization_v1_amendment_2.md
scripts/: collect_common_liquidity_l2.py  run_cross_venue_order_flow_transmission.py  run_okx_l2_availability_audit.py  run_okx_order_flow_external_validation.py  run_order_flow_futures_sensitivity.py  run_order_flow_synchronization.py  show_l2_collection_status.py  verify_cross_venue_order_flow_transmission.py  verify_okx_order_flow_external_validation.py  verify_order_flow_synchronization.py
src/: cross_venue_order_flow.py  okx_l2_audit.py  okx_l2_collection.py  okx_order_flow_external_validation.py  order_flow_synchronization.py  stats_utils.py  utils.py
tests/: test_cross_venue_order_flow.py  test_okx_l2_audit.py  (+2 more)
(+79 files in other folders)
